This file documents the revision history for mod_gearman.

4.0.1 Tue Mar 15 09:52:14 CET 2022
          - fix debian packaging

4.0.0 Fri Mar 11 16:14:37 CET 2022
          - drop nagios 3, nagios 4 and icinga 1 support
          - improve check results handling performance
          - add support for multiple result_workers
          - fix crash if gearmand is unreachable
          - fix host acknowledgement notification author macros

3.3.3 Tue Sep  1 11:30:47 CEST 2020
          - fix calculating uniq string

3.3.2 Wed Aug 19 16:19:35 CEST 2020
          - use base64 encoded uniq idendifiers
          - gearman_top: read address:port from env variable CONFIG_GEARMAND_PORT (#153)

3.3.1 Thu Jun 25 22:52:20 CEST 2020
          - fix builds with gcc 10

3.3.0 Fr 28. Feb 16:24:03 CET 2020
          - gearman_proxy.pl moved to separate repository
          - check_gearman: support setting exit code from result

3.2.1 Mon 21 Oct 18:15:25 CEST 2019
          - fix memory leak when using latest libgearman

3.2.0 Tue 10 Sep 08:56:51 CEST 2019
          - rebuild to match with new naemon 1.1.0 api version

3.1.0 Mon Jul  1 15:34:56 CEST 2019
          - fix macro escaping issue in notifications

3.0.9 Tue Apr 16 17:18:09 CEST 2019
          - fix issue with repeating checks

3.0.8 Fri Feb 15 15:21:48 CET 2019
          - code cleanup, use INITIATE events for naemon and nagios 4
            - requires at least naemon 1.0.9, will result in memory leaks otherwise
          - fix orphaned checks in naemon

3.0.7 Fri Nov 30 17:03:35 CET 2018
          - change timestamp format to double
          - add support for latest nagios core
          - fix incrementing naemon host check attempts by 2 each check

3.0.6 Thu Jul 26 10:05:56 CEST 2018
          - gearman_proxy.pl: set tcp keepalive
          - fix memory leak when using naemon
          - check_gearman: add -x option to alert queue without worker
          - update nagios4 header files to version 4.3.4
